--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,15 @@
 .app {
   
   height:100vh;
+  padding:0;
+  margin:0;
 }
 
 .app-navbar {
 
  margin-top: 1.6rem;
+ margin:0;
+ padding:0;
 }
 
 .app-content {
