--- a/src/Components/Home/css/style.css
+++ b/src/Components/Home/css/style.css
@@ -4,8 +4,13 @@
 .flex {
     display: flex;
 }
+html, body, .hero-content{
+    min-height: 100vh !important;
+    overflow-x: hidden !important;
+}
 
 body {
+    overflow-x: hidden !important;
     font-family: 'Poppins', sans-serif;
     font-size: 15px;
     font-weight: normal;
