--- a/src/Components/Home/css/style.css
+++ b/src/Components/Home/css/style.css
@@ -80,6 +80,60 @@ h2{
 }
 
 /*------------------------------------------------------------
+### Navbar hover ###
+*/
+
+nav.site-navigation ul li a {
+    position: relative;
+    overflow: hidden;
+    z-index: 1;
+}
+nav.site-navigation ul li a:after {
+    display: block;
+    position: absolute;
+    margin: 0;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    content: '.';
+    color: transparent;
+    width: 1px;
+    height: 1px;
+    border-radius: 50%;
+    background: transparent;
+}
+nav.site-navigation ul li a:hover:after {
+    -webkit-animation: circle 1.5s ease-in forwards;
+}
+@-webkit-keyframes circle {
+    0% {
+      width: 1px;
+      top: 0;
+      left: 0;
+      bottom: 0;
+      right: 0;
+      margin: auto;
+      height: 1px;
+      z-index: -1;
+      background:black;
+      border-radius: 100%;
+    }
+    100% {
+      background:rgb(17, 184, 235);
+      height: 5000%;
+      width: 5000%;
+      z-index: -1;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      margin: auto;
+      border-radius: 0;
+    }
+}
+
+/*------------------------------------------------------------
 ### site-navigation
 ------------------------------------------------------------*/
 /*
